<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CSOnline SMS Gateway</string>
    <string name="action_pop_settings">POP Settings</string>
    <string name="action_imap_settings">IMAP Settings</string>
    <string name="action_smtp_settings">SMTP Settings</string>
    <string name="action_send_email">Send E-mail</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="action_exit">Exit</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="remember_password">Remember password</string>
    <string name="principal">CSONLINE SMS GATEWAY</string>
    <string name="login_to_access">Login to access app:</string>
    <string name="log_server">LOG SERVER:</string>
    <string name="smtp">SMTP</string>
    <string name="imap">IMAP</string>
    <string name="pop">POP</string>
    <string name="imap_config_parameters">IMAP Account Settings:</string>
    <string name="imap_request_delivery">Request a delivery report.</string>
    <string name="imap_server_host">IMAP Server Host:</string>
    <string name="imap_server_port">IMAP Server Port:</string>
    <string name="imap_ssl">SSL</string>
    <string name="imap_username">IMAP username:</string>
    <string name="imap_password">IMAP password:</string>
    <string name="imap_interval">IMAP poll interval (milliseconds):</string>
    <string name="imap_delete_email">Delete email message from email server after being forwarded successfully to the GSM network.</string>
    <string name="imap_folder">Folder:</string>
    <string name="imap_oauth2">IMAP with OAuth 2.0</string>
    <string name="pop_config_parameters">POP Account Settings:</string>
    <string name="pop_request_delivery">Request a delivery report.</string>
    <string name="pop_server_host">POP Server Host:</string>
    <string name="pop_server_port">POP Server Port:</string>
    <string name="pop_ssl">SSL</string>
    <string name="pop_username">POP username:</string>
    <string name="pop_password">POP password:</string>
    <string name="pop_folder">Folder:</string>
    <string name="pop_oauth2">POP with OAuth 2.0</string>
    <string name="smtp_config_parameters">SMS and SMTP Account Settings:</string>
    <string name="smtp_enable_sms">Enable incoming SMS forwarding.</string>
    <string name="smtp_delete_sms">Delete SMS message after being forwarded successfully to the given SMTP server.</string>
    <string name="smtp_server_host">SMTP Server Host:</string>
    <string name="smtp_server_port">SMTP Server Port:</string>
    <string name="smtp_auth">Auth</string>
    <string name="smtp_ssl">SSL</string>
    <string name="smtp_username">SMTP username:</string>
    <string name="smtp_password">SMTP password:</string>
    <string name="smtp_forward_to_email">Forward to mail:</string>
    <string name="smtp_oauth2">SMTP with OAuth 2.0</string>
    <string name="login">Login</string>
    <string name="subject">Subject:</string>
    <string name="to">To:</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="submit">Confirm</string>
    <string name="start">Start SMS Route</string>
</resources>
