<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_pop_settings"
        android:orderInCategory="100"
        android:title="@string/action_pop_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_imap_settings"
        android:orderInCategory="100"
        android:title="@string/action_imap_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_smtp_settings"
        android:orderInCategory="100"
        android:title="@string/action_smtp_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="100"
        android:title="@string/action_send_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_sms"
        android:orderInCategory="100"
        android:title="@string/action_send_sms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit_app"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
